--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>XION</title>
   </head>
-  <body>
+  <body style="background: black;">
   </body>
 </html>
